<resources>
    <string name="app_name">MrPotato</string>
    <string name="mr_potato">Mr Potato</string>
    <string name="hat">Hat</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="nose">Nose</string>
    <string name="mustache">Mustache</string>
    <string name="arms">Arms</string>
    <string name="eyes">Eyes</string>
    <string name="glasses">Glasses</string>
    <string name="ears">Ears</string>
    <string name="mouth">Mouth</string>
    <string name="shoes">Shoes</string>
    <string name="placeholder">What to show:</string>
    <string name="author">Bachmid</string>
    <string name="body">Body</string>
</resources>
