<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:layout_marginBottom="30dp">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E8EAED" />

    <TextView
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:textColor="@color/dark"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.chip.Chip
            android:id="@+id/hat_chip"
            style="@style/CustomChipFilter"
            android:text="@string/hat" />

        <android.support.design.chip.Chip
            android:id="@+id/nose_chip"
            style="@style/CustomChipFilter"
            android:text="@string/nose" />

        <android.support.design.chip.Chip
            android:id="@+id/arms_chip"
            style="@style/CustomChipFilter"
            android:text="@string/arms" />

        <android.support.design.chip.Chip
            android:id="@+id/eyes_chip"
            style="@style/CustomChipFilter"
            android:text="@string/eyes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.chip.Chip
            android:id="@+id/glasses_chip"
            style="@style/CustomChipFilter"
            android:text="@string/glasses" />

        <android.support.design.chip.Chip
            android:id="@+id/eyebrows_chip"
            style="@style/CustomChipFilter"
            android:text="@string/eyebrows" />

        <android.support.design.chip.Chip
            android:id="@+id/ears_chip"
            style="@style/CustomChipFilter"
            android:text="@string/ears" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.chip.Chip
            android:id="@+id/mouth_chip"
            style="@style/CustomChipFilter"
            android:text="@string/mouth" />

        <android.support.design.chip.Chip
            android:id="@+id/mustache_chip"
            style="@style/CustomChipFilter"
            android:text="@string/mustache" />

        <android.support.design.chip.Chip
            android:id="@+id/shoes_chip"
            style="@style/CustomChipFilter"
            android:text="@string/shoes" />

    </LinearLayout>

</LinearLayout>